--- a/app/src/main/res/layout/ses.xml
+++ b/app/src/main/res/layout/ses.xml
@@ -126,7 +126,7 @@
     </LinearLayout>
     <View android:id="@+id/lineLatrineOth" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
     <LinearLayout android:id="@+id/seclbl017" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
-        <TextView android:id="@+id/lblHlbl017" android:text="০১৭. আপনার খানায় কি নিম্নের জিনিষগুলো ব্যবহার উপযোগী অবস্থায় আছে?" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="20sp" style="@style/rowHeading"/>
+        <TextView android:id="@+id/lblHlbl017" android:text="০১৭. আপনার খানায় কি নিম্নের জিনিষগুলো ব্যবহার উপযোগী অবস্থায় আছে? (প্রত্যেকটি জিনিস সম্বন্ধে জিজ্ঞেস করুন)" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="20sp" style="@style/rowHeading"/>
     </LinearLayout>
     <View android:id="@+id/linelbl017" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
     <LinearLayout android:id="@+id/secElectricity" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
