--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -75,12 +75,12 @@
         android:weightSum="1">
 
         <Button android:id="@+id/cmdHHList" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
-            android:layout_width="wrap_content"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="নতুন খানার তালিকা"
+            android:layout_width="fill_parent"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="নতুন খানার তালিকা"
             android:layout_weight="0.50" />
 
         <Button android:id="@+id/cmdHH" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:background="@drawable/button_style_blue"
             android:layout_width="wrap_content"  android:textSize="18sp" android:textColor="#ffffff" android:layout_height="40sp" android:text="নতুন খানা নিবন্ধন"
-            android:layout_weight="0.50" />
+            android:layout_weight="0.50" android:visibility="gone" />
 
     </LinearLayout>
     <View android:id="@+id/lineHHMenu" android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
