--- a/app/src/main/res/layout/form_heading.xml
+++ b/app/src/main/res/layout/form_heading.xml
@@ -19,7 +19,7 @@
         android:visibility="visible">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingLeft="10px"
